fix: overlaping navbar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,7 @@ body {
 
 #root {
   display: flex;
-  height: 100%;
+  height: auto;
 }
 
 main {
